{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 261,
  "lineage": "ce81fab8-0786-1ead-be9f-9a3da853b9b5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lab-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052cef05d01020f1d",
            "arn": "arn:aws:ec2:ap-south-1:151439720941:instance/i-04c1f3d47808bae41",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04c1f3d47808bae41",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Apache",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-077043ac9a7d6f9c5",
            "private_dns": "ip-10-1-0-157.ap-south-1.compute.internal",
            "private_ip": "10.1.0.157",
            "public_ip": "13.233.125.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05979d313fbfa24f0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c10acda310a113c",
            "tags": {
              "Name": "lab-alb"
            },
            "tags_all": {
              "Name": "lab-alb"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0de20414e4df856ca"
            ]
          },
          "dependencies": [
            "aws_security_group.lab-alb-ec2-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lab-alb-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052cef05d01020f1d",
            "arn": "arn:aws:ec2:ap-south-1:151439720941:instance/i-00dd90f384514e80e",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00dd90f384514e80e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Apache",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cb025b91828248b0",
            "private_dns": "ip-10-1-4-20.ap-south-1.compute.internal",
            "private_ip": "10.1.4.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0867d6f2ac9a526ed",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef6e6d1957ba2231",
            "tags": {
              "Name": "lab-alb-1"
            },
            "tags_all": {
              "Name": "lab-alb-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b66dd6533af680df"
            ]
          },
          "dependencies": [
            "aws_security_group.lab-alb-apache-sg",
            "aws_security_group.lab-alb-ec2-sg",
            "aws_security_group.lab-alb-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lab-alb-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:151439720941:loadbalancer/app/lab-alb-tf/755c29945140b09e",
            "arn_suffix": "app/lab-alb-tf/755c29945140b09e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lab-alb-tf-898842228.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:151439720941:loadbalancer/app/lab-alb-tf/755c29945140b09e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lab-alb-tf",
            "security_groups": [
              "sg-018c38616505675a7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06c10acda310a113c"
              },
              {
                "subnet_id": "subnet-0ef6e6d1957ba2231"
              }
            ],
            "subnets": [
              "subnet-06c10acda310a113c",
              "subnet-0ef6e6d1957ba2231"
            ],
            "tags": {
              "Name": "lab-alb-tf"
            },
            "tags_all": {
              "Name": "lab-alb-tf"
            },
            "vpc_id": "vpc-0d93065b230957826",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.lab-alb-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listen",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:151439720941:listener/app/lab-alb-tf/755c29945140b09e/610709327355b46e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:151439720941:targetgroup/lab-tg-1/0884fcacd8259d26",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:151439720941:listener/app/lab-alb-tf/755c29945140b09e/610709327355b46e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:151439720941:loadbalancer/app/lab-alb-tf/755c29945140b09e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lab-alb-tf",
            "aws_lb_target_group.lab-tg-1",
            "aws_security_group.lab-alb-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "listen-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:151439720941:targetgroup/lab-tg-1/0884fcacd8259d26",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:151439720941:listener-rule/app/lab-alb-tf/755c29945140b09e/610709327355b46e/ca293b149d5ef95d",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/football/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:151439720941:listener-rule/app/lab-alb-tf/755c29945140b09e/610709327355b46e/ca293b149d5ef95d",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:151439720941:listener/app/lab-alb-tf/755c29945140b09e/610709327355b46e",
            "priority": 2,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lab-alb-tf",
            "aws_lb_listener.listen",
            "aws_lb_target_group.lab-tg-1",
            "aws_security_group.lab-alb-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "listen-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:151439720941:targetgroup/lab-tg-2/9efb2a8eee281e00",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:151439720941:listener-rule/app/lab-alb-tf/755c29945140b09e/610709327355b46e/75c1a5a60f7c311d",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/cricket/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:151439720941:listener-rule/app/lab-alb-tf/755c29945140b09e/610709327355b46e/75c1a5a60f7c311d",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:151439720941:listener/app/lab-alb-tf/755c29945140b09e/610709327355b46e",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lab-alb-tf",
            "aws_lb_listener.listen",
            "aws_lb_target_group.lab-tg-1",
            "aws_lb_target_group.lab-tg-2",
            "aws_security_group.lab-alb-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lab-tg-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:151439720941:targetgroup/lab-tg-1/0884fcacd8259d26",
            "arn_suffix": "targetgroup/lab-tg-1/0884fcacd8259d26",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:151439720941:targetgroup/lab-tg-1/0884fcacd8259d26",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lab-tg-1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d93065b230957826"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lab-tg-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:151439720941:targetgroup/lab-tg-2/9efb2a8eee281e00",
            "arn_suffix": "targetgroup/lab-tg-2/9efb2a8eee281e00",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:151439720941:targetgroup/lab-tg-2/9efb2a8eee281e00",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lab-tg-2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d93065b230957826"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lab-tg-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:151439720941:targetgroup/lab-tg-1/0884fcacd8259d26-20220113020813132800000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:151439720941:targetgroup/lab-tg-1/0884fcacd8259d26",
            "target_id": "i-04c1f3d47808bae41"
          },
          "dependencies": [
            "aws_instance.lab-alb",
            "aws_lb_target_group.lab-tg-1",
            "aws_security_group.lab-alb-ec2-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lab-tg-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:151439720941:targetgroup/lab-tg-2/9efb2a8eee281e00-20220113020833921000000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:151439720941:targetgroup/lab-tg-2/9efb2a8eee281e00",
            "target_id": "i-00dd90f384514e80e"
          },
          "dependencies": [
            "aws_instance.lab-alb-1",
            "aws_lb_target_group.lab-tg-2",
            "aws_security_group.lab-alb-apache-sg",
            "aws_security_group.lab-alb-ec2-sg",
            "aws_security_group.lab-alb-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lab-alb-apache-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:151439720941:security-group/sg-0b66dd6533af680df",
            "description": "Allow traffic from lab-alb-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b66dd6533af680df",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "It allows only admins",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0de20414e4df856ca"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "It allows only enducers",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-018c38616505675a7"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lab-alb-apache-sg",
            "name_prefix": "",
            "owner_id": "151439720941",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab-alb-apache-sg"
            },
            "tags_all": {
              "Name": "lab-alb-apache-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d93065b230957826"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lab-alb-ec2-sg",
            "aws_security_group.lab-alb-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lab-alb-ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:151439720941:security-group/sg-0de20414e4df856ca",
            "description": "Allow traffic from lab-alb-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de20414e4df856ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "103.110.170.86/32"
                ],
                "description": "It allows only admins",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lab-alb-ec2-sg",
            "name_prefix": "",
            "owner_id": "151439720941",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab-alb-ec2-sg"
            },
            "tags_all": {
              "Name": "lab-alb-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d93065b230957826"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lab-alb-rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:151439720941:security-group/sg-05e942c89c1654d6a",
            "description": "Allow traffic from lab-alb-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e942c89c1654d6a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "It allows only admins",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b66dd6533af680df",
                  "sg-0de20414e4df856ca"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "lab-alb-rds-sg",
            "name_prefix": "",
            "owner_id": "151439720941",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab-alb-rds-sg"
            },
            "tags_all": {
              "Name": "lab-alb-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d93065b230957826"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lab-alb-apache-sg",
            "aws_security_group.lab-alb-ec2-sg",
            "aws_security_group.lab-alb-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lab-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:151439720941:security-group/sg-018c38616505675a7",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018c38616505675a7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "It allows internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lab-alb-sg",
            "name_prefix": "",
            "owner_id": "151439720941",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab-alb-sg"
            },
            "tags_all": {
              "Name": "lab-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d93065b230957826"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}